# ia

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Justfile  README.md  index.html  introduction.html  print.html  searchindex.js  searchindex.json
.travis/: Dockerfile
api/: aliases.js  search-index.js  settings.html  source-files.js
api/assets/: all.html  enum.Asset.html  index.html  sidebar-items.js  struct.Assets.html  struct.Model.html  struct.Texture.html
api/bincode/: enum.ErrorKind.html
api/cgmath/: all.html  fn.dot.html  fn.frustum.html  fn.ortho.html  fn.perspective.html  fn.vec1.html  fn.vec2.html  fn.vec3.html  fn.vec4.html  index.html  macro.abs_diff_eq.html  macro.abs_diff_ne.html  macro.assert_abs_diff_eq.html  macro.assert_abs_diff_ne.html  macro.assert_relative_eq.html  macro.assert_relative_ne.html  macro.assert_ulps_eq.html  macro.assert_ulps_ne.html  macro.relative_eq.html  macro.relative_ne.html  macro.ulps_eq.html  macro.ulps_ne.html  struct.AbsDiff.html  struct.Basis2.html  struct.Basis3.html  struct.Decomposed.html  struct.Deg.html  struct.Euler.html  struct.Matrix2.html  struct.Matrix3.html  struct.Matrix4.html  struct.Ortho.html  struct.Perspective.html  struct.PerspectiveFov.html  struct.Point1.html  struct.Point2.html  struct.Point3.html  struct.Quaternion.html  struct.Rad.html  struct.Relative.html  (+28 more)
api/crossbeam_deque/: enum.Pop.html  enum.Steal.html
api/crossbeam_epoch/: struct.Atomic.html  struct.Owned.html  struct.Shared.html
api/dlib/: struct.Library.html  struct.Symbol.html
api/ecstasy/: all.html  index.html  sidebar-items.js  struct.ComponentStore.html  struct.Engine.html  struct.EnginePassBuilder.html  struct.Entity.html  trait.Component.html  trait.System.html  trait.SystemMut.html
api/ecstasy_proc_macros/: all.html  attr.system.html  attr.system_mut.html  derive.Component.html  index.html  sidebar-items.js
api/env_logger/: enum.Target.html  enum.WriteStyle.html
api/erased_serde/: struct.Error.html
api/frunk/: all.html  index.html  macro.Coprod.html  macro.Hlist.html  macro.field.html  macro.hlist.html  macro.hlist_pat.html  macro.poly_fn.html  sidebar-items.js
api/frunk_core/: all.html  index.html  macro.Coprod.html  macro.Hlist.html  macro.field.html  macro.hlist.html  macro.hlist_pat.html  macro.poly_fn.html
api/frunk_derives/: all.html  derive.Generic.html  derive.LabelledGeneric.html  index.html
api/frunk_proc_macro_helpers/: all.html  fn.build_hcons_constr.html  fn.build_path_type.html  fn.build_type_level_name_for.html  fn.call_site_ident.html  fn.find_idents_in_expr.html  fn.to_ast.html  index.html  sidebar-items.js
api/frunk_proc_macros/: all.html  index.html  macro.path.html  sidebar-items.js
api/frunk_proc_macros_impl/: all.html  derive.proc_macro_hack_path.html  index.html  sidebar-items.js
api/half/: struct.f16.html
api/hashbrown/: enum.CollectionAllocErr.html  struct.HashSet.html
api/ia/: all.html  index.html
api/ia_asset_tool/: all.html  index.html
api/ia_internal_debug_tool/: all.html  index.html
api/ia_model_viewer/: all.html  index.html
api/image/: all.html  enum.ColorType.html  enum.DynamicImage.html  enum.FilterType.html  enum.ImageError.html  enum.ImageFormat.html  enum.ImageOutputFormat.html  index.html  sidebar-items.js  struct.Bgr.html  struct.Bgra.html  struct.Frame.html  struct.Frames.html  struct.ImageBuffer.html  struct.Luma.html  struct.LumaA.html  struct.MutPixels.html  struct.Pixels.html  struct.Rgb.html  struct.Rgba.html  struct.SubImage.html  trait.AnimationDecoder.html  trait.ImageDecoder.html  trait.ImageDecoderExt.html
api/inflate/: struct.InflateStream.html
api/iqm/: all.html  index.html  sidebar-items.js  struct.IQM.html  struct.Mesh.html
api/jpeg_decoder/: enum.Error.html
api/libloading/: struct.Symbol.html
api/libremexre/: all.html  index.html  macro.err.html  sidebar-items.js
api/line_drawing/: struct.Bresenham.html  struct.Bresenham3d.html  struct.BresenhamCircle.html  struct.Midpoint.html  struct.Supercover.html  struct.WalkGrid.html  struct.WalkVoxels.html  struct.XiaolinWu.html
api/memmap/: struct.Mmap.html  struct.MmapMut.html
api/nix/: enum.Error.html
api/num_rational/: struct.Ratio.html
api/ordered_float/: enum.ParseNotNanError.html  struct.FloatIsNan.html  struct.NotNan.html
api/png/: enum.BitDepth.html  enum.ColorType.html  enum.Compression.html  enum.DecodingError.html  enum.EncodingError.html  enum.Unit.html  struct.AnimationControl.html  struct.FrameControl.html  struct.Info.html  struct.PixelDimensions.html
api/rand/: struct.AsciiGenerator.html  struct.Generator.html  trait.SeedableRng.html
api/rayon/: struct.ThreadPoolBuildError.html
api/rayon_core/: struct.ThreadPoolBuildError.html
api/renderer/: all.html  index.html  macro.init_renderer!.html  macro.init_renderer.html  sidebar-items.js  struct.Renderer.html
api/zstd/: all.html  (+2 more)
bins/ia/: Cargo.toml
bins/ia-asset-tool/: Cargo.toml
bins/ia-asset-tool/src/: main.rs
bins/ia-model-viewer/: Cargo.toml
bins/ia-model-viewer/src/: main.rs
bins/ia/src/: main.rs
components/iqm/: Cargo.toml
components/iqm/fuzz/fuzz_targets/: fuzz_target_1.rs
components/iqm/src/: lib.rs
docs/: SUMMARY.md  book.toml  introduction.md
engine/: Cargo.toml
engine-design/: asset-loading.html  index.html
game/: Cargo.toml
libs/assets/: Cargo.toml
libs/assets/src/: cache.rs  irb.rs  lib.rs  loader.rs  model.rs  program.rs  texture.rs
libs/ecs/: Cargo.toml
libs/ecs/benches/: component_store.rs  noop_system.rs  simple.rs
libs/ecs/src/: component_store.rs  components.rs  engine.rs  lib.rs  tests.rs  unsafe_option_vec.rs
libs/ecs_proc_macros/: Cargo.toml
libs/ecs_proc_macros/src/: lib.rs
libs/ecstasy/: Cargo.toml
libs/ecstasy/benches/: component_store.rs  noop_system.rs
libs/ecstasy/src/: component_store.rs  components.rs  engine.rs  lib.rs  tests.rs  unsafe_option_vec.rs
libs/renderer/: Cargo.toml
libs/renderer/src/: components.rs  draw.rs  initialize.rs  lib.rs
notebook/: 2019-05-08-color-schemes.html  2019-05-08-generating-cultures.html  index.html
(+4030 files in other folders)
