[package]
name = "ia-asset-tool"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@protonmail.com>"]
edition = "2018"

[dependencies]
assets = { path = "../../libs/assets" }
iqm = { path = "../../libs/iqm" }
libremexre = { features = ["log", "pretty_env_logger"], version = "0.1.9" }
log = "0.4.6"
serde_cbor = "0.9.0"
serde_sexpr = "0.1.0"
shaderc = "0.5.0"
structopt = "0.2.15"
