[package]
name = "ia"
version = "0.1.0"
authors = ["Nathan Ringo <remexre@gmail.com>"]
edition = "2018"

[dependencies]
ecs = { path = "../../libs/ecs" }
libremexre = { default-features = false, version = "0.1.6" }
log = "0.4.6"
renderer = { path = "../../libs/renderer" }
stderrlog = "0.4.1"
structopt = "0.2.15"
winit = "0.18.0"
