[package]
authors = ["Nathan Ringo <remexre@protonmail.com>"]
description = "A parser for the IQM format used by Cube 2 games."
license = "Apache-2.0/MIT"
edition = "2018"
name = "iqm"
version = "0.1.0"

[dependencies]
byteorder = "1.3.1"
log = "0.4.6"

[dev-dependencies]
pretty_assertions = "0.6.1"
glob = "0.3.0"
