[package]
authors = ["Nathan Ringo <remexre@protonmail.com>"]
description = "An asset manager."
license = "Apache-2.0/MIT"
edition = "2018"
name = "assets"
version = "0.1.0"

[dependencies]
antidote = "1.0.0"
ecstasy = { path = "../ecstasy" }
lazy_static = "1.3.0"
libremexre = { default-features = false, version = "0.1.6" }
serde = "1.0.90"
typetag = "0.1.2"
