[package]
authors = ["Nathan Ringo <remexre@protonmail.com>"]
description = "An asset manager."
license = "Apache-2.0/MIT"
edition = "2018"
name = "assets"
version = "0.1.0"

[dependencies]
derivative = "1.0.2"
derive_more = "0.14.0"
ecstasy = { path = "../ecstasy" }
image = { default-features = false, features = ["jpeg", "png_codec"], version = "0.21.1" }
libremexre = "0.1.8"
log = "0.4.6"
serde = "1.0.90"
serde_cbor = "0.9.0"
smallvec = { features = ["serde"], version = "0.6.9" }
typemap = "0.3.3"
typetag = "0.1.2"

[features]
disk = []
