[package]
authors = ["Nathan Ringo <remexre@protonmail.com>"]
description = "An asset manager."
license = "Apache-2.0/MIT"
edition = "2018"
name = "assets"
version = "0.1.0"

[dependencies]
bincode = "1.1.3"
derive_more = "0.14.0"
image = { default-features = false, features = ["jpeg", "png_codec"], version = "0.21.1" }
libremexre = "0.1.9"
log = "0.4.6"
serde = "1.0.90"
vulkano = "0.11.1"
zstd = "0.4.24"

[features]
disk = []
