[package]
authors = ["Nathan Ringo <remexre@protonmail.com>"]
description = "A simple ECS library."
license = "Apache-2.0/MIT"
edition = "2018"
name = "ecs"
version = "0.1.0"

[dependencies]
cgmath = "0.17.0"
safety-guard = "0.1.9"
derive_more = "0.14.0"

[dev-dependencies]
lazy_static = "1.3.0"
pretty_assertions = "0.6.1"
