[package]
authors = ["Nathan Ringo <remexre@protonmail.com>"]
description = "A simple ECS library."
license = "Apache-2.0/MIT"
edition = "2018"
name = "ecs"
version = "0.1.0"

[dependencies]
cgmath = "0.17.0"
derive_more = "0.14.0"
ecs_proc_macros = { path = "../ecs_proc_macros" }
frunk = "0.3.0"
rayon = "1.0.3"
safety-guard = "0.1.9"

[dev-dependencies]
criterion = "0.2.11"
pretty_assertions = "0.6.1"
rand = "0.6.5"

[[bench]]
name = "component_store"
harness = false

[[bench]]
name = "noop_system"
harness = false
