[package]
authors = ["Nathan Ringo <remexre@protonmail.com>"]
description = "Procedural macros for the ecs crate."
license = "Apache-2.0/MIT"
edition = "2018"
name = "ecs_proc_macros"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4.27"
quote = "0.6.12"
syn = "0.15.32"
uuid = { version = "0.7.4", features = ["v4"] }
