[package]
authors = ["Nathan Ringo <remexre@protonmail.com>"]
description = "A simple ECS library."
license = "Apache-2.0/MIT"
edition = "2018"
name = "ecstasy"
version = "0.1.0"

[dependencies]
assets = { path = "../assets" }
cgmath = { version = "0.17.0",  features = ["serde"] }
derive_more = "0.14.0"
ecstasy_proc_macros = { path = "../ecstasy_proc_macros" }
frunk = "0.3.0"
hashbrown = "0.2.2"
rayon = "1.0.3"
safety-guard = "0.1.9"
serde = "1.0.90"
typetag = "0.1.3"

[dev-dependencies]
criterion = "0.2.11"
pretty_assertions = "0.6.1"
rand = "0.6.5"

[[bench]]
name = "component_store"
harness = false

[[bench]]
name = "noop_system"
harness = false
