[package]
authors = ["Nathan Ringo <remexre@protonmail.com>"]
description = "A Vulkan-based renderer."
license = "Apache-2.0/MIT"
edition = "2018"
name = "renderer"
version = "0.1.0"

[dependencies]
assets = { path = "../assets" }
ecs = { path = "../ecs" }
libremexre = { default-features = false, version = "0.1.5" }
log = "0.4.6"
vulkano = "0.11.1"
