[package]
authors = ["Nathan Ringo <remexre@protonmail.com>"]
description = "A Vulkan-based renderer."
license = "Apache-2.0/MIT"
edition = "2018"
name = "renderer"
version = "0.1.0"

[dependencies]
assets = { path = "../assets" }
derivative = "1.0.2"
ecstasy = { path = "../ecstasy" }
libremexre = "0.1.9"
log = "0.4.6"
serde = { version = "1.0.90", features = ["rc"] }
typetag = "0.1.2"
vulkano = "0.11.1"
vulkano-win = "0.11.1"
winit = "0.18.0"
